--- a/src/index.css
+++ b/src/index.css
@@ -62,12 +62,14 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; /* match parent height */
   opacity: 0;
-  transition: opacity 1s ease-in-out;
+  transition: opacity 1.5s ease-in-out;
+  z-index: 0;
 }
 
 .hero-slide.active {
   opacity: 1;
   z-index: 10;
 }
+
